--- a/confusion/src/App.css
+++ b/confusion/src/App.css
@@ -1,38 +1,90 @@
-.App {
-  text-align: center;
+/*
+    mixins:
+ */
+/*
+    document styles:
+ */
+ body {
+	padding: 50px 0px 0px 0px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar-dark {
+	background-color: #512DA8;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.jumbotron {
+	margin: 0px auto;
+	padding: 70px 30px;
+	background: #9575CD;
+	color: floralwhite;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.tab-content {
+	border-left: 1px solid #ddd;
+	border-right: 1px solid #ddd;
+	border-bottom: 1px solid #ddd;
+	padding: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.carousel {
+	background: #512DA8;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.carousel .carousel-item {
+	height: 300px;
+}
+
+.carousel .carousel-item img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	min-height: 300px;
+}
+
+#btn-carousel-cycle {
+	position: absolute;
+	right: 0px;
+	bottom: 0px;
+	z-index: 1;
+}
+
+.modal .modal-dialog .modal-content .modal-header {
+	color: floralwhite;
+	background-color: #512DA8;
+}
+
+.modal .modal-dialog .modal-content .modal-header button {
+	color: floralwhite;
+}
+
+.modal .modal-dialog .modal-content .modal-body {
+	background-color: #D1C4E9;
+}
+
+.modal .modal-dialog .modal-content .modal-body button {
+	color: floralwhite;
+}
+
+.row-header {
+	margin: 0px auto;
+	padding: 0px 0px;
+}
+
+.row-content {
+	margin: 0px auto;
+	padding: 50px 0px;
+	border-bottom: 1px ridge;
+	min-height: 40px;
+}
+
+.footer {
+	margin: 0px auto;
+	padding: 20px 0px;
+	background-color: #D1C4E9;
+}
+
+address {
+	margin: 0px auto;
+	font-size: 80%;
+	color: #0f0f0f;
 }
